--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,15 @@ dependencies {
     implementation 'androidx.room:room-ktx:2.6.1'
     kapt 'androidx.room:room-compiler:2.6.1'
     
+    // MediaPipe dependencies
+    implementation 'com.google.mediapipe:tasks-vision:0.10.0'
+    
+    // CameraX dependencies
+    implementation 'androidx.camera:camera-core:1.3.2'
+    implementation 'androidx.camera:camera-camera2:1.3.2'
+    implementation 'androidx.camera:camera-lifecycle:1.3.2'
+    implementation 'androidx.camera:camera-view:1.3.2'
+    
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
